force-app/main/default/objects/Account_Request__c/Account_Request__c.object-meta.xml
<CustomObject>
    <description>Custom Salesforce Object which will be used to request a new account for the community.</description>
    <label>Account Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>