force-app/main/default/objects/Account_Request__c/fields/Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_PostalCode__c</fullName>
    <label>Billing PostalCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>