force-app/main/default/objects/Account_Request__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <inlineHelpText>Address of theCustomer</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>