force-app/main/default/objects/Account_Request__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>The date of birth of the customer</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>