force-app/main/default/objects/Account_Request__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Phone of the account owner</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>