force-app/main/default/objects/Account_Request__c/fields/PrimaryContact_Email__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact_Email__c</fullName>
    <inlineHelpText>The email ofthe primary contact</inlineHelpText>
    <label>PrimaryContact Email</label>
    <type>Email</type>
</CustomField>