force-app/main/default/objects/Account_Request__c/fields/PrimaryContact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact_FirstName__c</fullName>
    <inlineHelpText>The FirstName of the primary contact</inlineHelpText>
    <label>PrimaryContact FirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>