force-app/main/default/objects/Account_Request__c/fields/PrimaryContact_LastName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact_LastName__c</fullName>
    <inlineHelpText>The LastName of thePrimaryContact</inlineHelpText>
    <label>PrimaryContact LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>