force-app/main/default/objects/Account_Request__c/fields/PrimaryContact_Phone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact_Phone__c</fullName>
    <inlineHelpText>The phone no of the primaryContact</inlineHelpText>
    <label>PrimaryContact Phone</label>
    <type>Phone</type>
</CustomField>