force-app/main/default/objects/Account_Request__c/fields/PrimaryContact_Title__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact_Title__c</fullName>
    <label>PrimaryContact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>