force-app/main/default/objects/Account_Request__c/fields/ShippingPostal_Code__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostal_Code__c</fullName>
    <label>ShippingPostal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>