force-app/main/default/objects/Account_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>PrimaryContact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>